@@ -869,11 +869,10 @@ public interface AbstractCredentialsServiceTest {
         final String deviceId = UUID.randomUUID().toString();
         final String authId = UUID.randomUUID().toString();
 
-        final PasswordCredential credential = new PasswordCredential(authId);
         final PasswordSecret sec1 = new PasswordSecret().setPasswordPlain("bar");
         final PasswordSecret sec2 = new PasswordSecret().setPasswordPlain("foo");
 
-        credential.setSecrets(Arrays.asList(sec1, sec2));
+        final PasswordCredential credential = new PasswordCredential(authId, List.of(sec1, sec2));
 
         // create device & set credentials
 
@@ -919,12 +918,10 @@ public interface AbstractCredentialsServiceTest {
 
         phase2.future().onComplete(ctx.succeeding(n -> {
             // create a credential object with only one of the ID.
-            final PasswordCredential credentialWithOnlyId = new PasswordCredential(authId);
-
             final PasswordSecret secretWithOnlyId = new PasswordSecret();
             secretWithOnlyId.setId(secretIDs.get(0));
 
-            credentialWithOnlyId.setSecrets(Collections.singletonList(secretWithOnlyId));
+            final PasswordCredential credentialWithOnlyId = new PasswordCredential(authId, List.of(secretWithOnlyId));
 
             getCredentialsManagementService()
                     .updateCredentials(tenantId, deviceId, Collections.singletonList(credentialWithOnlyId),
@@ -994,9 +991,8 @@ public interface AbstractCredentialsServiceTest {
 
         // Retrieve credentials IDs
 
-        final Promise<?> phase2 = Promise.promise();
+        final Promise<PasswordCredential> phase2 = Promise.promise();
         final AtomicReference<String> pwdSecretId = new AtomicReference<>();
-        final PasswordCredential updatedCredential = new PasswordCredential(authId);
 
         phase1.future()
                 .compose(n -> getCredentialsManagementService().readCredentials(tenantId, deviceId, NoopSpan.INSTANCE))
@@ -1024,16 +1020,16 @@ public interface AbstractCredentialsServiceTest {
                         final PasswordSecret newSecret = new PasswordSecret();
                         newSecret.setPasswordPlain("future-password");
                         newSecret.setNotBefore(origSecret.getNotAfter());
-                        updatedCredential.setSecrets(List.of(changedSecret, newSecret));
+                        final PasswordCredential updatedCredential = new PasswordCredential(authId, List.of(changedSecret, newSecret));
+                        phase2.complete(updatedCredential);
                     });
-                    phase2.complete();
                }));
 
         // update credentials, including additional PSK credentials
         final Promise<?> phase3 = Promise.promise();
 
         phase2.future()
-            .compose(n -> getCredentialsManagementService().updateCredentials(
+            .compose(updatedCredential -> getCredentialsManagementService().updateCredentials(
                     tenantId,
                     deviceId,
                     List.of(updatedCredential, Credentials.createPSKCredential(authId, "shared-key")),
@@ -1141,14 +1137,11 @@ public interface AbstractCredentialsServiceTest {
 
         phase2.future().onComplete(ctx.succeeding(n -> {
             // Add some metadata to the secret
-            final PasswordCredential credentialWithMetadataUpdate = new PasswordCredential(authId);
-
             final PasswordSecret secretWithOnlyIdAndMetadata = new PasswordSecret();
             secretWithOnlyIdAndMetadata.setId(secretIDs.get(0));
             secretWithOnlyIdAndMetadata.setComment("secret comment");
 
-
-            credentialWithMetadataUpdate.setSecrets(Collections.singletonList(secretWithOnlyIdAndMetadata));
+            final PasswordCredential credentialWithMetadataUpdate = new PasswordCredential(authId, List.of(secretWithOnlyIdAndMetadata));
 
             getCredentialsManagementService()
                     .updateCredentials(tenantId, deviceId, Collections.singletonList(credentialWithMetadataUpdate),
@@ -1251,12 +1244,11 @@ public interface AbstractCredentialsServiceTest {
 
         phase2.future().onComplete(ctx.succeeding(n -> {
             // Add some other metadata to the secret
-            final PasswordCredential credentialWithMetadataUpdate = new PasswordCredential(authId);
-
             final PasswordSecret secretWithOnlyIdAndMetadata = new PasswordSecret();
             secretWithOnlyIdAndMetadata.setId(secretIDs.get(0));
             secretWithOnlyIdAndMetadata.setComment("secret comment");
-            credentialWithMetadataUpdate.setSecrets(Collections.singletonList(secretWithOnlyIdAndMetadata));
+
+            final PasswordCredential credentialWithMetadataUpdate = new PasswordCredential(authId, List.of(secretWithOnlyIdAndMetadata));
 
             getCredentialsManagementService()
                     .updateCredentials(tenantId, deviceId, Collections.singletonList(credentialWithMetadataUpdate),
